# mini-football

./: CMakeLists.txt  README.md
include/entities/: Ball.h  Player.h  Scoreboard.h
src/: main.cpp
src/entities/: Ball.cpp  Field.cpp  Player.cpp  Scoreboard.cpp
